Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6182950/T6182950a.out
T6182950a.java:12:12: compiler.err.name.clash.same.erasure: m(java.util.List<java.lang.Integer>), m(java.util.List<java.lang.String>)
1 error
